--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolioo | OanNZ</title>
+  <title>Portofolio | OanNZ</title>
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -15,9 +15,9 @@
   <div class="container">
     <input type="button" id="menu-btn">
     <div class="title">
-      My Portfolioo
+      My Portofolio
       <label for="menu-btn">
-        <i class="fas fa-bars menu-btn"></i>
+        <i class="fas fa-bars menu-btn">i</i>
       </label>
       <label for="close-menu">
         <i class="fas fa-times close-menu"></i>
