--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="title">
       My Portofolio
       <label for="menu-btn">
-        <i class="fas fa-bars menu-btn">i</i>
+        <i class="fas fa-bars menu-btn"></i>
       </label>
       <label for="close-menu">
         <i class="fas fa-times close-menu"></i>
