--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portofolio | OanNZ</title>
+  <title>Portfolio | OanNZ</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -15,7 +16,7 @@
   <div class="container">
     <input type="button" id="menu-btn">
     <div class="title">
-      My Portofolio
+      My Portfolio
       <label for="menu-btn">
         <i class="fas fa-bars menu-btn"></i>
       </label>
