--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="title">
       My Portfolio
       <label for="menu-btn">
-        <i class="fas fa-bars menu-btn"></i>
+        <i class="fas fa-bars menu-btn">o</i>
       </label>
       <label for="close-menu">
         <i class="fas fa-times close-menu"></i>
