--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <i class="fas fa-bars menu-btn">o</i>
       </label>
       <label for="close-menu">
-        <i class="fas fa-times close-menu"></i>
+        <i class="fas fa-times close-menu">x</i>
       </label>
     </div>
     <input type="button" id="close-menu">
