--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
         <form action="https://formsubmit.co/oannajmiz@gmail.com" method="POST">
           <fieldset>
             <label for="name">Name :</label>
-            <input type="text" placeholder="Enter your name" required>
+            <input type="text" name="Name:" placeholder="Enter your name" required>
             <label for="email">Email :</label>
-            <input type="email" placeholder="Input your email address.." required>
+            <input type="email" name="Email:" placeholder="Input your email address.." required>
             <label for="message">Message :</label>
-            <textarea name="message" placeholder="Write your message.." required></textarea>
+            <textarea name="This a massage:" placeholder="Write your message.." required></textarea>
             <input type="submit" id="submit">
           </fieldset>
         </form>
