--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <label for="email">Email :</label>
             <input type="email" name="Email" placeholder="Input your email address.." required>
             <label for="message">Message :</label>
-            <textarea name="This,a,massage" placeholder="Write your message.." required></textarea>
+            <textarea name="This&nbsp;a&nbsp;massage" placeholder="Write your message.." required></textarea>
             <input type="submit" id="submit">
           </fieldset>
         </form>
