--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
       <label for="menu-btn">
         <i class="fas fa-bars menu-btn"></i>
       </label>
-      <!--<label for="close-menu">
-        <i class="fas fa-times close-menu"></i>
-      </label>-->
     </div>
-    <input type="button" id="close-menu">
     <nav>
       <ul class="nav-link">
         <li class="menu-title">My Portfolio</li>
@@ -42,9 +38,7 @@
           <a href="#project" class="link">Projects</a>
         </li>
         <li>
-          <a href="#contact" class="link contactBtn">Contact Me</a>
-          <!--<label for="contactBtn">Contact Me</label>
-          <input type="button" id="contactBtn" />-->
+          <a href="contact.html">Contact Me</a>
         </li>
       </ul>
     </nav>
@@ -186,23 +180,6 @@
             <span></span>
           </div>
         </div>
-      </div>
-    </section>
-    <section id="contact">
-      <div class="wrapper">
-        <h2>Contact Me</h2>
-        <form action="https://formsubmit.co/oannajmiz@gmail.com" method="POST">
-          <fieldset>
-            <label for="name">Name :</label>
-            <input type="text" name="Name" placeholder="Enter your name" required>
-            <label for="email">Email :</label>
-            <input type="email" name="Email" placeholder="Input your email address.." required>
-            <label for="message">Message :</label>
-            <textarea name="This&nbsp;a&nbsp;massage" placeholder="Write your message.." required></textarea>
-            <input type="submit" id="submit">
-          </fieldset>
-        </form>
-        
       </div>
     </section>
   </div>
