--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul class="nav-link">
         <li class="menu-title">My Portfolio</li>
         <li>
-          <a href="#home" class="link">Home</a>
+          <a href="#home" class="link active">Home</a>
         </li>
         <li>
           <a href="#about" class="link">About Me</a>
