--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | OanNZ</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" style="border-radius: 50%"/>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" style="border-radius: 50%" />
   <link rel="stylesheet" href="css/style.css">
   <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -14,7 +14,6 @@
 
 <body>
   <div class="container">
-    
     <input type="button" id="menu-btn">
     <div class="title">
       My Portfolio
@@ -38,7 +37,7 @@
           <a href="#project" class="link">Projects</a>
         </li>
         <li>
-          <a href="contact.html">Contact Me</a>
+          <a href="#contact" class="link">Contact Me</a>
         </li>
       </ul>
     </nav>
@@ -178,6 +177,29 @@
               <a>Text Here</a>
             </div>
             <span></span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="wrapper">
+        <h2>Contact Me !</h2>
+        <div class="contact-links">
+          <div class="links">
+            <i class="fab fa-facebook-square"></i>
+            <a href="https://www.facebook.com/profile.php?id=100008238636540" class="link">Oan Najmi Zertho</a>
+          </div>
+          <div class="links">
+            <i class="fab fa-instagram-square"></i>
+            <a href="https://www.instagram.com/oan.najmi/" class="link">@oan.najmi</a>
+          </div>
+          <div class="links">
+            <i class="fab fa-whatsapp-square"></i>
+            <a href="https://api.whatsapp.com/send?phone=6281280484301&text=Hi" class="link">+62-812-8048-4301</a>
+          </div>
+          <div class="links">
+            <i class="far fa-envelope"></i>
+            <a href="contact.html" class="link">oannajmiz@gmail.com</a>
           </div>
         </div>
       </div>
