--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body>
   <div class="container">
-    <input type="button" id="menu-btn">
+    <!--<input type="button" id="menu-btn">-->
     <div class="title">
       My Portfolio
-      <label for="menu-btn">
-        <i class="fas fa-bars menu-btn"></i>
-      </label>
     </div>
+    <label for="menu-btn" class="tes">
+      <i class="fas fa-bars menu-btn"></i>
+    </label>
     <nav>
       <ul class="nav-link">
         <li class="menu-title">My Portfolio</li>
@@ -184,6 +184,7 @@
     <section id="contact">
       <div class="wrapper">
         <h2>Contact Me !</h2>
+        <hr>
         <div class="contact-links">
           <div class="links">
             <i class="fab fa-facebook-square"></i>
@@ -206,6 +207,7 @@
     </section>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="js/jQuery.easing.1.3.js"></script>
   <script src="js/script.js"></script>
 </body>
 
