--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
   <meta charset="UTF-8">
@@ -12,14 +12,12 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="title">
-      My Portfolio
-    </div>
+  <div class="container" translate="yes">
+    <h1 href="https://oannazer.github.io" class="title" translate="no">My Portfolio</h1>
     <label for="menu-btn" class="tes">
       <i class="fas fa-bars menu-btn"></i>
     </label>
-    <nav>
+    <nav translate="no">
       <ul class="nav-link">
         <li class="menu-title">My Portfolio</li>
         <li>
@@ -179,7 +177,7 @@
         </div>
       </div>
     </section>
-    <section id="contact">
+    <section id="contact" translate="no">
       <div class="wrapper">
         <h2>Contact Me !</h2>
         <hr>
