--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
         <div class="contact-links">
           <div class="links">
             <i class="fab fa-facebook-square"></i>
-            <a href="https://www.facebook.com/profile.php?id=100008238636540" class="link">Oan Najmi Zertho</a>
+            <a href="https://www.facebook.com/profile.php?id=100008238636540" target="_blank" class="link">Oan Najmi Zertho</a>
           </div>
           <div class="links">
             <i class="fab fa-instagram-square"></i>
-            <a href="https://www.instagram.com/oan.najmi/" class="link">@oan.najmi</a>
+            <a href="https://www.instagram.com/oan.najmi/" target="_blank" class="link">@oan.najmi</a>
           </div>
           <div class="links">
             <i class="fab fa-whatsapp-square"></i>
-            <a href="https://api.whatsapp.com/send?phone=6281280484301&text=Hi" class="link">+62-812-8048-4301</a>
+            <a href="https://api.whatsapp.com/send?phone=6281280484301&text=Hi" target="_blank" class="link">+62-812-8048-4301</a>
           </div>
           <div class="links">
             <i class="far fa-envelope"></i>
