--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="New Web Developer">
+  <meta name="keywords" content="Programmer, OanNZ, oannazer, oannajmiz, web developer, dev on phone">
+  <meta name="author" content="Oan Najmi Zertho">
   <title>Portfolio | OanNZ</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" style="border-radius: 50%" />
   <link rel="stylesheet" href="css/style.css">
