--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
    <div class="container" translate="yes">
-    <h1 href="https://oannazer.github.io" class="title" translate="no">My Portfolio</h1>
+      <h1 href="https://oannazer.github.io" class="title" translate="no">My Portfolio</h1>
       <label for="menu-btn" class="tes">
          <i class="fas fa-bars menu-btn"></i>
       </label>
@@ -26,6 +26,7 @@
             <li>
                <a href="#home" class="link active">Home</a>
             </li>
+            <li class="ahay" id="yuhu" alt="yeuh">lol</li>
             <li>
                <a href="#about" class="link">About Me</a>
             </li>
