--- a/index.html
+++ b/index.html
@@ -2,257 +2,212 @@
 <html lang="en" translate="no">
 
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="New Web Developer">
-   <meta name="keywords" content="Programmer, OanNZ, oannazer, oannajmiz, web developer, dev on phone">
-   <meta name="author" content="Oan Najmi Zertho">
-   <title>Portfolio | OanNZ</title>
-   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" style="border-radius: 50%" />
-   <link rel="stylesheet" href="css/style.css">
-   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="New Web Developer">
+  <meta name="keywords" content="Programmer, OanNZ, oannazer, oannajmiz, web developer, dev on phone">
+  <meta name="author" content="Oan Najmi Zertho">
+  <title>Portfolio | OanNZ</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" style="border-radius: 50%" />
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body>
-   <div class="container" translate="yes">
-      <h1 href="https://oannazer.github.io" class="title" translate="no">My Portfolio</h1>
-      <label for="menu-btn" class="tes">
-         <i class="fas fa-bars menu-btn"></i>
-      </label>
-      <nav translate="no">
-         <ul class="nav-link">
-            <li class="menu-title">My Portfolio</li>
-            <li>
-               <a href="#home" class="link active">Home</a>
-            </li>
-            
-            <li>
-               <a href="#about" class="link">About Me</a>
-            </li>
-            <li>
-               <a href="#skill" class="link">Skills</a>
-            </li>
-            <li>
-               <a href="#project" class="link">Projects</a>
-            </li>
-            <li>
-               <a href="#contact" class="link">Contact Me</a>
-            </li>
-         </ul>
-      </nav>
-      <section id="home" class="active">
-         <div class="jumbotron">
-            <h1>Oan Najmi Zertho</h1>
-            <div class="thumbnail">
-               <p>
-                  Thumbnail
-               </p>
-               <img src="img/profile.jpg" alt="">
+  <div class="container" translate="yes">
+    <h1 href="https://oannazer.github.io" class="title" translate="no">My Portfolio</h1>
+    <label for="menu-btn" class="tes">
+      <i class="fas fa-bars menu-btn"></i>
+    </label>
+    <nav translate="no">
+      <ul class="nav-link">
+        <li class="menu-title">My Portfolio</li>
+        <li>
+          <a href="#home" class="link active">Home</a>
+        </li>
+        <li>
+          <a href="#about" class="link">About Me</a>
+        </li>
+        <li>
+          <a href="#skill" class="link">Skills</a>
+        </li>
+        <li>
+          <a href="#project" class="link">Projects</a>
+        </li>
+        <li>
+          <a href="#contact" class="link">Contact Me</a>
+        </li>
+      </ul>
+    </nav>
+    <section id="home" class="active">
+      <div class="jumbotron">
+        <h1>Oan Najmi Zertho</h1>
+        <div class="thumbnail">
+          <p>Thumbnail</p>
+          <img src="img/profile.jpg" alt="My Profile" class="profile">
+        </div>
+        <p>Beginner | Web Developer</p>
+      </div>
+    </section>
+    <section id="about">
+      <div class="wrapper">
+        <h2>About Me</h2>
+        <p>Hi guys! How are you today? I hope you are alright. Let me introduce first. I'm Oan Najmi Zertho, you can call me Oan. I live in
+          Karawang, West Java, Indonesia. I love Math and Physics. I love all about Technology so much.
+          Especially, programming.
+          <br><br>This is the sample of My Portfolio. This thing was told you about Me and what i have done with My projects journey,
+          cuz I'm here as beginner and I hope you like My projects. So that, I have to learn more from now.
+          <br><br>I am not learn programming from teacher, tutor, and nobody else. I've learn all about program only by Myself and maybe some article on internet and YouTube. Alright, till here I wrote all of about me. Have a nice day! See you.</p>
+      </div>
+    </section>
+    <section id="skill">
+      <div class="wrapper">
+        <h2>Skills</h2>
+        <div class="area-content">
+          <div class="skill-box microsoft">
+            <div class="title-box">Microsoft Offices</div>
+            <div class="content-box">
+              <div class="grade-box">
+                <p>Microsoft Word</p>
+                <div class="progress-box m-word">
+                  <div class="progress-num">90%</div>
+                  <div class="progress-bar">
+                    <div class="progress"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="grade-box">
+                <p>Microsoft Excel</p>
+                <div class="progress-box m-excel">
+                  <div class="progress-num">40%</div>
+                  <div class="progress-bar">
+                    <div class="progress m-excel"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="grade-box">
+                <p>Microsoft PowerPoint</p>
+                <div class="progress-box m-point">
+                  <div class="progress-num">80%</div>
+                  <div class="progress-bar">
+                    <div class="progress m-point"></div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <p>
-               Beginner | Web Developer
-            </p>
-         </div>
-      </section>
-      <section id="about">
-         <div class="wrapper">
-            <h2>About Me</h2>
-            <p>
-               Hi guys! How are you today? I hope you are alright. Let me introduce first. I'm Oan Najmi Zertho, you can call me Oan. I live in
-               Karawang, West Java, Indonesia. I love Math and Physics. I love all about Technology so much.
-               Especially, programming.
-               <br><br>This is the sample of My Portfolio. This thing was told you about Me and what i have done with My projects journey,
-               cuz I'm here as beginner and I hope you like My projects. So that, I have to learn more from now.
-               <br><br>I am not learn programming from teacher, tutor, and nobody else. I've learn all about program only by Myself and maybe some article on internet and YouTube. Alright, till here I wrote all of about me. Have a nice day! See you.
-            </p>
-         </div>
-      </section>
-      <section id="skill">
-         <div class="wrapper">
-            <h2>Skills</h2>
-            <div class="area-content">
-               <div class="skill-box microsoft">
-                  <div class="title-box">
-                     Microsoft Offices
+          </div>
+          <div class="skill-box programming">
+            <div class="title-box">Programming Languages</div>
+            <div class="content-box">
+              <div class="grade-box">
+                <p>JavaScript</p>
+                <div class="progress-box javascript">
+                  <div class="progress-num">60%</div>
+                  <div class="progress-bar">
+                    <div class="progress javascript"></div>
                   </div>
-                  <div class="content-box">
-                     <div class="grade-box">
-                        <p>
-                           Microsoft Word
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              90%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress m-word"></div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="grade-box">
-                        <p>
-                           Microsoft Excel
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              40%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress m-excel"></div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="grade-box">
-                        <p>
-                           Microsoft PowerPoint
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              80%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress m-point"></div>
-                           </div>
-                        </div>
-                     </div>
+                </div>
+              </div>
+              <div class="grade-box">
+                <p>PHP</p>
+                <div class="progress-box php">
+                  <div class="progress-num">30%</div>
+                  <div class="progress-bar">
+                    <div class="progress php"></div>
                   </div>
-               </div>
-               <div class="skill-box programming">
-                  <div class="title-box">
-                     Programming Languages
+                </div>
+              </div>
+              <div class="grade-box">
+                <p>Python</p>
+                <div class="progress-box python">
+                  <div class="progress-num">50%</div>
+                  <div class="progress-bar">
+                    <div class="progress python"></div>
                   </div>
-                  <div class="content-box">
-                     <div class="grade-box">
-                        <p>
-                           JavaScript
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              60%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress javascript"></div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="grade-box">
-                        <p>
-                           PHP
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              30%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress php"></div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="grade-box">
-                        <p>
-                           Python
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              50%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress python"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="skill-box graphic">
-                  <div class="title-box">
-                     Graphic Designs
-                  </div>
-                  <div class="content-box">
-                     <div class="grade-box">
-                        <p>
-                           CorelDraw X7
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              70%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress coreldraw"></div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="grade-box">
-                        <p>
-                           Photoshop
-                        </p>
-                        <div class="progress-box">
-                           <div class="progress-num">
-                              60%
-                           </div>
-                           <div class="progress-bar">
-                              <div class="progress photoshop"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+                </div>
+              </div>
             </div>
-         </div>
-      </section>
-      <section id="project">
-         <div class="wrapper">
-            <h2>Projects</h2>
-            <div class="area-content">
-               <div class="project-box">
-                  <div class="pic-box">
-                     <img src="img/profile.jpg" alt="">
+          </div>
+          <div class="skill-box graphic">
+            <div class="title-box">Graphic Designs</div>
+            <div class="content-box">
+              <div class="grade-box">
+                <p>CorelDraw X7</p>
+                <div class="progress-box coreldraw">
+                  <div class="progress-num">70%</div>
+                  <div class="progress-bar">
+                    <div class="progress coreldraw"></div>
                   </div>
-                  <div class="caption">
-                     <a>Text Here</a>
+                </div>
+              </div>
+              <div class="grade-box">
+                <p>Photoshop</p>
+                <div class="progress-box photoshop">
+                  <div class="progress-num">60%</div>
+                  <div class="progress-bar">
+                    <div class="progress photoshop"></div>
                   </div>
-                  <span></span>
-               </div>
-               <div class="project-box">
-                  <div class="pic-box">
-                     <img src="img/profile.jpg" alt="">
-                  </div>
-                  <div class="caption">
-                     <a>Text Here</a>
-                  </div>
-                  <span></span>
-               </div>
+                </div>
+              </div>
             </div>
-         </div>
-      </section>
-      <section id="contact" translate="no">
-         <div class="wrapper">
-            <h2>Contact Me !</h2>
-            <hr>
-            <div class="contact-links">
-               <div class="links">
-                  <i class="fab fa-facebook-square"></i>
-                  <a href="https://www.facebook.com/profile.php?id=100008238636540" target="_blank" class="link">Oan Najmi Zertho</a>
-               </div>
-               <div class="links">
-                  <i class="fab fa-instagram-square"></i>
-                  <a href="https://www.instagram.com/oan.najmi/" target="_blank" class="link">@oan.najmi</a>
-               </div>
-               <div class="links">
-                  <i class="fab fa-whatsapp-square"></i>
-                  <a href="https://api.whatsapp.com/send?phone=6281280484301&text=Hi" target="_blank" class="link">+62-812-8048-4301</a>
-               </div>
-               <div class="links">
-                  <i class="far fa-envelope"></i>
-                  <a href="contact.html" class="link">oannajmiz@gmail.com</a>
-               </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="project">
+      <div class="wrapper">
+        <h2>Projects</h2>
+        <div class="area-content">
+          <div class="project-box">
+            <div class="pic-box">
+              <img src="img/profile.jpg" alt="">
             </div>
-         </div>
-      </section>
-   </div>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-   <script src="js/jQuery.easing.1.3.js"></script>
-   <script src="js/script.js"></script>
+            <div class="caption">
+              <a>Text Here</a>
+            </div>
+            <span></span>
+          </div>
+          <div class="project-box">
+            <div class="pic-box">
+              <img src="img/profile.jpg" alt="">
+            </div>
+            <div class="caption">
+              <a>Text Here</a>
+            </div>
+            <span></span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact" translate="no">
+      <div class="wrapper">
+        <h2>Contact Me !</h2>
+        <hr>
+        <div class="contact-links">
+          <div class="links">
+            <i class="fab fa-facebook-square"></i>
+            <a href="https://www.facebook.com/profile.php?id=100008238636540" target="_blank" class="link">Oan Najmi Zertho</a>
+          </div>
+          <div class="links">
+            <i class="fab fa-instagram-square"></i>
+            <a href="https://www.instagram.com/oan.najmi/" target="_blank" class="link">@oan.najmi</a>
+          </div>
+          <div class="links">
+            <i class="fab fa-whatsapp-square"></i>
+            <a href="https://api.whatsapp.com/send?phone=6281280484301&text=Hi" target="_blank" class="link">+62-812-8048-4301</a>
+          </div>
+          <div class="links">
+            <i class="far fa-envelope"></i>
+            <a href="contact.html" class="link">oannajmiz@gmail.com</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <script src="js/jquery.3.6.0.min.js"></script>
+  <script src="js/jQuery.easing.1.3.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
