--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>Oan Najmi Zertho</h1>
         <div class="thumbnail">
           <p>Thumbnail</p>
-          <img src="img/profile.jpg" alt="">
+          <img src="img/profile.jpg">
         </div>
         <p>Beginner | Web Developer</p>
       </div>
